// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addFeedback should create an appropriate action 1`] = `
Object {
  "meta": Object {
    "anonymous": undefined,
    "expiration": undefined,
    "key": "feedback-add",
    "namespace": "default",
    "suffix": "FEEDBACK_ADD",
  },
  "payload": Object {
    "data": Object {
      "foo": "bar",
    },
    "headers": undefined,
    "method": "POST",
    "params": undefined,
    "url": "/users/someone/cohorts/someone/projects/someone/feedbacks",
  },
  "type": "@@api-client/API_REQUEST/FEEDBACK_ADD",
}
`;

exports[`deleteFeedback should create an appropriate action 1`] = `
Object {
  "meta": Object {
    "anonymous": undefined,
    "expiration": undefined,
    "key": "feedback-delete",
    "namespace": "default",
    "suffix": "FEEDBACK_DELETE",
  },
  "payload": Object {
    "data": undefined,
    "headers": undefined,
    "method": "DELETE",
    "params": undefined,
    "url": "/feedbacks/someone",
  },
  "type": "@@api-client/API_REQUEST/FEEDBACK_DELETE",
}
`;

exports[`getFeedbacks should create an appropriate action 1`] = `
Object {
  "meta": Object {
    "anonymous": undefined,
    "expiration": undefined,
    "key": "user/someone/feedbacks",
    "namespace": "default",
    "suffix": "FEEDBACKS",
  },
  "payload": Object {
    "data": undefined,
    "headers": undefined,
    "method": "GET",
    "params": undefined,
    "url": "/users/someone/cohorts/someone/projects/someone/feedbacks",
  },
  "type": "@@api-client/API_REQUEST/FEEDBACKS",
}
`;

exports[`getFeedbacksByType should create an appropriate action 1`] = `
Object {
  "meta": Object {
    "anonymous": undefined,
    "expiration": undefined,
    "key": "user/someone/feedbacks/someone",
    "namespace": "default",
    "suffix": "FEEDBACK_REVIEWER_SURVEY",
  },
  "payload": Object {
    "data": undefined,
    "headers": undefined,
    "method": "GET",
    "params": undefined,
    "url": "/users/someone/cohorts/someone/projects/someone/feedbacks/someone",
  },
  "type": "@@api-client/API_REQUEST/FEEDBACK_REVIEWER_SURVEY",
}
`;

exports[`sendFeedback should create an appropriate action 1`] = `
Object {
  "meta": Object {
    "anonymous": undefined,
    "expiration": undefined,
    "key": "feedback-send",
    "namespace": "default",
    "suffix": "FEEDBACK_SEND",
  },
  "payload": Object {
    "data": undefined,
    "headers": undefined,
    "method": "POST",
    "params": undefined,
    "url": "/users/someone/cohorts/someone/projects/someone/feedbacks/someone/_send",
  },
  "type": "@@api-client/API_REQUEST/FEEDBACK_SEND",
}
`;

exports[`updateFeedback should create an appropriate action 1`] = `
Object {
  "meta": Object {
    "anonymous": undefined,
    "expiration": undefined,
    "key": "feedback-update",
    "namespace": "default",
    "suffix": "FEEDBACK_UPDATE",
  },
  "payload": Object {
    "data": Object {
      "foo": "bar",
    },
    "headers": undefined,
    "method": "PUT",
    "params": undefined,
    "url": "/feedbacks/someone",
  },
  "type": "@@api-client/API_REQUEST/FEEDBACK_UPDATE",
}
`;
